--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,13 @@
-<h2>{{ hero.name | uppercase }} Details</h2>
-<div><span>id: </span>{{ hero.id }}</div>
-<div><span>name: </span>{{ hero.name }}</div>
+<h2>My Heroes</h2>
+<ul>
+  <li
+    *ngFor="let hero of heroes"
+    [class.selected]="hero === selectedHero"
+    (click)="onSelect(hero)"
+    class="hero"
+  >
+    <span>{{ hero.id }}</span> {{ hero.name }}
+  </li>
+</ul>
 
-<div>
-  <label for="name">Hero name: </label>
-  <input id="name" placeholder="name" type="text" [(ngModel)]="hero.name" />
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
